# Chat-Messaging

./: .env  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: asgi.py  settings.py  urls.py
includes/middleware/: channels_auth_middleware.py
includes/scripts/: dev_shell.sh
messaging/: routing.py  urls.py
messaging/consumers/: chat.py
messaging/filters/: chat.py
messaging/migrations/: 0001_initial.py  0002_chatroommessage_read.py  0003_remove_chatroommessage_read_and_more.py  0004_chatroommember_last_updated_chatroommember_online.py
messaging/models/: chat.py
messaging/pagination/: chat.py
messaging/permissions/: chat.py
messaging/serializers/: chat.py
messaging/views/: chat.py
users/: admin.py  authorization.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_hq_user_data_timedauthtokenpair.py  0003_alter_user_hq_user_data_profile.py  0004_alter_user_hq_user_data.py  0005_alter_user_hq_user_data.py  0006_alter_user_hq_user_data.py
users/models/: __init__.py  auth.py  users.py
users/permissions/: auth.py
users/serializers/: auth.py  user.py
users/utils/: auth.py
users/views/: auth.py
